<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/mountain" />

    <Button
        android:id="@+id/search"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSearch"
        android:text="@string/search" />

    <Button
        android:id="@+id/about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search"
        android:layout_alignStart="@+id/search"
        android:layout_below="@+id/search"
        android:onClick="onClickAbout"
        android:layout_marginTop="40dp"
        android:text="@string/about" />

    <Button
        android:id="@+id/favButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search"
        android:layout_alignStart="@+id/search"
        android:layout_below="@+id/about"
        android:onClick="onClickAbout"
        android:layout_marginTop="40dp"
        android:text="@string/favs" />

</RelativeLayout>
