<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/SearchFragment"
    android:columnCount="2"
    >
    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:indeterminate="true"
        android:visibility="invisible"
        android:max="100"
        android:indeterminateTint="#1a09d6"
        />
    <ImageView
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="0"
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="13dp"
        app:srcCompat="@drawable/glass" />
    <TextView
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="1"
        android:id="@+id/searchinfo"
        android:textSize="18sp"
        android:text="@string/howtosearch"
        />
    <TextView
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/country"
        />

    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginRight="80dp"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="United States"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="visible" />
    <TextView
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/state"
        />
    <EditText
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:textSize="18sp"
        android:layout_row="3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:layout_marginRight="80dp"
        />
    <TextView
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/town"
        />
    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:textSize="18sp"
        android:layout_row="4"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:layout_marginRight="80dp"
        />
    <Switch
        android:id="@+id/FavoritesSwitch"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_row="5"
        android:textSize="14sp"
        android:text="Add these search parameters to favorites"
        />
    <TextView
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="6"
        android:id="@+id/favnamelabel"
        android:text="Name of Favorite: "
        android:visibility="invisible"
        />
    <EditText
        android:id="@+id/favnameinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:textSize="18sp"
        android:layout_row="6"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:layout_marginRight="80dp"
        android:visibility="invisible"
        />
    <Button
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_marginTop="33dp"
        android:layout_row="7"
        android:layout_width="match_parent"
        android:text="@string/search"
        android:layout_marginBottom="15dp"
        android:id="@+id/search"
        />



</GridLayout>